# testos

./: .env.example  .gdbinit  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  Makefile.toml  README.md  TODO.md  bochsrc  boot.nasm  boot.s  build-grub-image.sh  build-image.sh  build.rs  build.sh  check-fmt  console.c  debug-loader  gdt.c  gdt.h  gdt.nasm  grub.cfg  helpers.h  helpers.nasm  idt.h  interrupts.nasm  kernel.c  kernel.ld  kernel.s  linker.ld  loader.ld  make-image.sh  makeiso.sh  multiboot.h  port.h  run-fmt  run-qemu.sh  (+2 more)
.cargo/: config.toml
.claude/agents/: source-grounded-explorer.md
.claude/skills/qemu-boot/: SKILL.md
.github/workflows/: ci.yml
acpica/: acconfig.h
acpica/platform/: acenv.h  actestos.h
buildutil/: Cargo.toml
buildutil/src/: lib.rs
console/: console.c  console.h
core/: CMakeLists.txt  README.md  terminal.c  terminal.h
cpu/: CMakeLists.txt  apic.c  apic.h  gdt.c  idt.c  idt.h  idt.nasm  interrupt.c  interrupt.nasm  pic.c  pic.h  port.c  port.h
docs/: kani-findings.md  verification.md
fetch-prebuilts/: Cargo.toml
fetch-prebuilts/src/: main.rs
init/: Cargo.toml
init/src/: main.rs
io/: CMakeLists.txt  terminal.c  terminal.h  vga.c  vga.h
kernel/: Cargo.toml  build.rs  linker.ld
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  context.rs  entry.nasm  idt.rs  interrupts.rs  lib.rs  linker.ld  logging.rs  main.rs  mm.rs  paging.rs  pic.rs  pit.rs  rtc.rs  sched.rs  terminal.rs  vga.rs  x86_util.rs
kernel/src/acpi/: mod.rs  osl.rs
kernel/src/interrupts/: apic.rs  irq.rs  mod.rs  pic.rs
kernel/src/mm/: heap.rs  mod.rs  paging.rs  physmem.rs  virtmem.rs
kernel/src/sched/: context.rs  mod.rs
kernel/src/selftest/: mod.rs  zero_initialize.rs
kernel/src/sync/: mod.rs  semaphore.rs
kernel/src/time/: mod.rs  pit.rs
loader/: Cargo.toml  boot.nasm  build.rs
loader/.cargo/: config.toml
loader/src/: boot.nasm  lib.rs  linker.ld  main.rs  multiboot.rs  paging.rs  physmem.rs  terminal.rs  vga.rs
mkimage/: Cargo.toml
mkimage/src/: main.rs
rustsrc/: Cargo.toml
rustsrc/src/: elf.rs  lib.rs  mm.rs  multiboot.rs  terminal.rs  vga.rs
rustsrc/targets/: i686-unknown-none.json  x86_64-unknown-none.json
shared/: Cargo.toml
shared/src/: boot_info.rs  elf.rs  handoff.rs  lib.rs  log.rs  logging.rs  memory.rs  paging.rs  physmem.rs  terminal.rs  vga.rs
shared/src/memory/: addr.rs  alloc.rs  mod.rs  page.rs  paging.rs
shared/src/memory/alloc/: heap.rs  phys.rs
shared/src/physmem/: base.rs  mod.rs
src/: entry.nasm  gdt.rs  idt.rs  kmain.rs  linker.ld  main.rs  mb2_header.rs  mm.rs  pic.rs  qemu.rs  sched.rs
src/mm/: mod.rs  paging.rs
src/sched/: mod.rs
targets/: i686-unknown-none.json  x86_64-unknown-none.json  x86_64-unknown-testos.json
x86/: CMakeLists.txt  boot.nasm  gdt.c  gdt.h  helpers.nasm  idt.c  idt.h  interrupt.h  interrupt.nasm  interrupts.nasm  port.c  port.h
