[package]
name = "kernel"
version = "0.1.0"
authors = ["Collin <chbaker0@gmail.com>"]
edition = "2021"

[workspace]
members = [
    ".",
    "buildutil",
    "init",
    "loader",
    "mkimage",
    "shared",
]
default-members = ["."]
resolver = "2"

[workspace.dependencies]
aligned = "0.4.1"
arrayvec = { version = "0.7.2", default-features = false }
bitflags = "2.4.2"
cargo_metadata = "0.18.1"
cfg-if = "1.0"
clap = "4"
color-eyre = { version = "0.6", default-features = false }
env_logger = "0.11.1"
eyre = "0.6"
intrusive-collections = { version = "0.9.6", default-features = false, features = ["nightly"] }
itertools = { version = "0.12.1", default-features = false }
memoffset = "0.9.0"
lazy_static = { version = "1.4.0", default-features = false }
log = "0.4.14"
multiboot2 = "0.19.0"
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
pretty_assertions = "1.4.0"
proptest = "1.4.0"
spin = "0.9.8"
static_assertions = "1.1.0"
test-log = "0.2.11"
uefi = "0.26.0"
xmas-elf = "0.9.1"
x86_64 = "0.14.10"

[features]
default = ["qemu_debugcon"]
qemu_debugcon = []

[dependencies]
shared = { path = "shared" }

bitflags = { workspace = true }
cfg-if = { workspace = true }
lazy_static = { workspace = true, features = ["spin_no_std"] }
log = { workspace = true }
multiboot2 = { workspace = true }
once_cell = { workspace = true }
spin = { workspace = true }
static_assertions = { workspace = true }
uefi = { workspace = true }
xmas-elf = { workspace = true }
x86_64 = { workspace = true }

# Build most dependencies with optimizations in debug mode. Most debuggable
# issues are unlikely to come from most crates.io deps. This doesn't affect
# workspace packages.
#
# Optimizing dependencies, especially the standard library, significantly
# improves debug mode performance.
[profile.dev.package."*"]
opt-level = 2
debug = 1
debug-assertions = true
overflow-checks = true
# Dependencies aren't rebuilt often, so there's not a strong reason to use
# incremental builds.
incremental = false
codegen-units = 1

[profile.release]
lto = "thin"
incremental = false
codegen-units = 1
