[package]
name = "kernel"
version = "0.1.0"
authors = ["Collin <chbaker0@gmail.com>"]
edition = "2024"

[lints]
workspace = true

[workspace]
members = [
    ".",
    "buildutil", "fetch-prebuilts",
    "init",
    "loader",
    "mkimage",
    "shared",
]
default-members = ["."]
resolver = "2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
never_type_fallback_flowing_into_unsafe = "deny"
# `cfg(kani)` is set by `cargo kani`, not by cargo itself, so a normal build
# doesn't know the name. See docs/verification.md.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

# `warn`, not `deny`: `cargo kclippy` already fails on a pre-existing
# violation in src/kmain.rs (issue #23), and `shared` has pre-existing
# warnings, so `deny` would red-CI the repo on unrelated existing debt.
# Promote to `deny` once that debt is cleared.
[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
missing_safety_doc = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"

[workspace.dependencies]
aligned = "0.4.3"
arrayvec = { version = "0.7.6", default-features = false }
bitfield-struct = "0.13.0"
bitflags = "2.10.0"
cargo_metadata = "0.23.1"
cfg-if = "1.0"
clap = "4"
color-eyre = { version = "0.6", default-features = false }
elf = { version = "0.8.0", default-features = false }
env_logger = "0.11.8"
eyre = "0.6"
intrusive-collections = { version = "0.10.0", default-features = false, features = ["nightly"] }
itertools = { version = "0.15.0", default-features = false }
memoffset = "0.9.1"
lazy_static = { version = "1.5.0", default-features = false }
log = "0.4.29"
multiboot2 = "0.25.0"
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
ovmf-prebuilt = "0.2.7"
pretty_assertions = "1.4.1"
proptest = "1.9.0"
spin = "0.12.2"
static_assertions = "1.1.0"
test-log = "0.2.19"
uefi = "0.39.0"
xmas-elf = "0.10.0"
x86_64 = "0.15.4"

[features]
default = ["qemu_debugcon"]
qemu_debugcon = []

[dependencies]
shared = { path = "shared" }

bitflags = { workspace = true }
cfg-if = { workspace = true }
lazy_static = { workspace = true, features = ["spin_no_std"] }
log = { workspace = true }
multiboot2 = { workspace = true }
once_cell = { workspace = true }
spin = { workspace = true }
static_assertions = { workspace = true }
uefi = { workspace = true }
xmas-elf = { workspace = true }
x86_64 = { workspace = true }

# Build most dependencies with optimizations in debug mode. Most debuggable
# issues are unlikely to come from most crates.io deps. This doesn't affect
# workspace packages.
#
# Optimizing dependencies, especially the standard library, significantly
# improves debug mode performance.
[profile.dev.package."*"]
opt-level = 2
debug = 1
debug-assertions = true
overflow-checks = true
# Dependencies aren't rebuilt often, so there's not a strong reason to use
# incremental builds.
incremental = false
codegen-units = 1

[profile.release]
lto = "thin"
incremental = false
codegen-units = 1
