[package]
name = "kernel"
version = "0.1.0"
authors = ["Collin <chbaker0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { version = "1.5.2", default-features = false }
shared = { path = "../shared" }
spin = "0.7.0"
x86_64 = "0.12.3"
