[package]
name = "loader"
version = "0.1.0"
authors = ["Collin <chbaker0@gmail.com>"]
edition = "2018"

[dependencies]
shared = { path = "../shared" }
static_assertions = "1.1.0"
xmas-elf = "0.7.0"

[dependencies.arrayvec]
version = "0.5.1"
default-features = false
features = ["array-sizes-33-128"]

#[dependencies.goblin]
#version = "0.2.3"
#default-features = false
#features = ["elf32", "elf64", "endian_fd"]
