[package]
name = "loader"
version = "0.1.0"
authors = ["Collin <chbaker0@gmail.com>"]
edition = "2018"

[dependencies]
shared = { path = "../shared" }
static_assertions = "1.1.0"
xmas-elf = "0.8.0"

[dependencies.arrayvec]
version = "0.7.2"
default-features = false

[dependencies.x86_64]
version = "0.14.7"
default-features = false
features = ["nightly"]

#[dependencies.goblin]
#version = "0.2.3"
#default-features = false
#features = ["elf32", "elf64", "endian_fd"]
