[package]
name = "loader"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
shared = { path = "../shared" }

elf = { workspace = true }
log = { workspace = true }
x86_64 = { workspace = true }

[dependencies.uefi]
workspace = true
features = [
    "alloc",
    "global_allocator",
    "log-debugcon",
    "logger",
    "panic_handler",
    "qemu",
]
