[package]
name = "mkimage"
version = "0.1.0"
edition = "2021"

[features]
# Use local grub-mkrescue instead of xorriso + prebuilt GRUB image.
grub-mkrescue = []

[dependencies]
buildutil = { path = "../buildutil" }

cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
eyre = { workspace = true }
