[package]
name = "shared"
version = "0.1.0"
authors = ["Collin <chbaker0@gmail.com>"]
edition = "2021"

[dependencies]
itertools = { version = "0.10.5", default-features = false }
log = "0.4.17"
spin = "0.9.5"
static_assertions = "1.1.0"

[dependencies.arrayvec]
version = "0.7.2"
default-features = false

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
