[package]
name = "shared"
version = "0.1.0"
authors = ["Collin <chbaker0@gmail.com>"]
edition = "2021"

[features]
default = ["alloc"]
alloc = []

[dependencies]
arrayvec = { workspace = true }
intrusive-collections = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
memoffset = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
spin = { workspace = true }
static_assertions = { workspace = true }
x86_64 = { workspace = true }

[dev-dependencies]
aligned = { workspace = true }
env_logger = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
test-log = { workspace = true }
